--- a/res/layout/video_layer_new.xml
+++ b/res/layout/video_layer_new.xml
@@ -481,29 +481,6 @@
 					        android:scaleType="fitXY"				        
 							android:src="@drawable/icon_share"
 					        />		
-					    <FrameLayout
-					    	android:id="@+id/playback_follow"		
-					        android:layout_width="35dip" 
-					        android:layout_height="35dip">				    				        
-							<ImageView
-						    	android:id="@+id/follow_icon"
-						        android:layout_width="fill_parent" 
-						        android:layout_height="fill_parent"
-						        android:padding="2dip"
-						        android:adjustViewBounds="true"
-						        android:scaleType="fitXY"			        
-								android:src="@drawable/icon_follow"
-						        />					   
-						    <ProgressBar
-							    android:id="@+id/follow_progress"          
-						    	android:layout_width="fill_parent"
-						    	android:layout_height="fill_parent"
-						    	android:layout_gravity="center"
-						    	android:gravity="center"
-						    	style="@android:style/Widget.ProgressBar.Inverse"
-						    	android:visibility="gone"
-						    	/>									        
-					    </FrameLayout>
 					</LinearLayout>     			
 			    </LinearLayout>				
 	    	</LinearLayout>
@@ -548,7 +525,7 @@
 					    android:orientation="horizontal"
 					    android:background="#484848"
 					    />
-					<LinearLayout
+					<!--LinearLayout
 					    android:layout_width="match_parent"
 					    android:layout_height="wrap_content"
 					    android:orientation="horizontal">
@@ -563,7 +540,7 @@
 							android:singleLine="true"	
 							android:ellipsize="end"	
 							android:text="COMMENTS"
-					    	/>	
+					    	/>
 					    <TextView	        
 					  	    android:id="@+id/num_comments_dot"						        
 							android:layout_width="wrap_content"
@@ -605,11 +582,22 @@
 					    android:layout_height="2px"
 					    android:orientation="horizontal"
 					    android:background="#484848"
-					    />										
+					    /-->										
 					<LinearLayout
 					    android:layout_width="match_parent"
 					    android:layout_height="wrap_content"
 					    android:orientation="horizontal">
+						<ImageView
+					    	android:id="@+id/playback_ephide"
+					        android:layout_width="40dip" 
+					        android:layout_height="40dip"
+					        android:layout_gravity="center"
+					        android:gravity="center"
+					        android:padding="6dip"
+					        android:adjustViewBounds="true"
+					        android:scaleType="fitXY"
+					        android:src="@drawable/icon_eplist_close"
+					        />							
 					    <TextView		     
 					        android:id="@+id/playback_from_prefix"   
 							android:layout_width="wrap_content"
@@ -645,6 +633,32 @@
 							android:singleLine="true"	
 							android:ellipsize="end"						
 					    	/>		
+					    <FrameLayout
+					    	android:id="@+id/playback_follow"		
+					        android:layout_width="35dip" 
+					        android:layout_height="35dip"
+					        android:layout_marginRight="10dip"
+					        android:layout_gravity="center"
+					        android:gravity="center">				    				        
+							<ImageView
+						    	android:id="@+id/follow_icon"
+						        android:layout_width="fill_parent" 
+						        android:layout_height="fill_parent"
+						        android:padding="2dip"
+						        android:adjustViewBounds="true"
+						        android:scaleType="fitXY"			        
+								android:src="@drawable/icon_heart"
+						        />					   
+						    <ProgressBar
+							    android:id="@+id/follow_progress"          
+						    	android:layout_width="fill_parent"
+						    	android:layout_height="fill_parent"
+						    	android:layout_gravity="center"
+						    	android:gravity="center"
+						    	style="@android:style/Widget.ProgressBar.Inverse"
+						    	android:visibility="gone"
+						    	/>									        
+					    </FrameLayout>					    	
 						<LinearLayout
 						    android:layout_width="wrap_content"
 						    android:layout_height="wrap_content"
@@ -655,7 +669,8 @@
 							android:layout_marginRight="10dip"				
 							android:layout_marginTop="2dip"		
 							android:layout_marginBottom="2dip"								    
-						    android:background="@drawable/episode_number_bg">				    	
+						    android:background="@drawable/episode_number_bg"
+							android:visibility="gone">
 						    <TextView		
 						        android:id="@+id/playback_episode_count"        
 								android:layout_width="wrap_content"
@@ -711,10 +726,10 @@
 				    android:layout_gravity="top|center_horizontal"
 				    android:gravity="top|center_horizontal"
 					android:scrollbarSize="0dip"
-					android:background="#00000000"		    
+					android:background="#000000"		    
 				    />		   			     		
 			</LinearLayout>		
-		    <LinearLayout
+		    <!--LinearLayout
 		        android:id="@+id/playbackbody_comments_view"
 			    android:layout_width="match_parent"
 			    android:layout_height="match_parent"
@@ -729,7 +744,7 @@
 					android:drawSelectorOnTop="false"
 					android:cacheColorHint="@android:color/transparent"
 					/>						
-			</LinearLayout>							
+			</LinearLayout-->							
 	    </LinearLayout>	
 	   
 	</LinearLayout> 			
