--- a/res/layout/app_item.xml
+++ b/res/layout/app_item.xml
@@ -56,6 +56,6 @@
 	    android:layout_height="1px"
 	    android:layout_marginTop="5dip"
 	    android:orientation="horizontal"
-	    android:background="#777777"
+	    android:background="#C2C2C2"
 	    />   	
 </LinearLayout>
