--- a/res/layout/store_layer.xml
+++ b/res/layout/store_layer.xml
@@ -18,7 +18,7 @@
 	<LinearLayout
 	    android:id="@+id/category_handle"           
 		android:layout_width="fill_parent" 
-		android:layout_height="wrap_content"
+		android:layout_height="35dip"
 		android:layout_gravity="left|center_vertical"
 		android:gravity="left|center_vertical"				
 		android:background="#FFFFFF"
@@ -26,12 +26,12 @@
 	   	<TextView
 	    	android:id="@+id/category_name"
 	        android:layout_width="wrap_content" 
-	        android:layout_height="wrap_content"  	        
+	        android:layout_height="fill_parent"
+	        android:layout_gravity="center"
+	        android:gravity="center"  	        
 	        android:paddingLeft="25dip"
-	        android:paddingRight="25dip"     
-	        android:paddingTop="6dip"   
-	        android:paddingBottom="6dip"           
-	        android:textSize="28sp"
+	        android:paddingRight="25dip"            
+	        android:textSize="24sp"
 	        android:textColor="#000000"
 			android:singleLine="true"
 			android:ellipsize="end"		
