--- a/res/layout/channel_tablet.xml
+++ b/res/layout/channel_tablet.xml
@@ -5,7 +5,7 @@
     android:orientation="vertical"
     android:background="#FFFFFF">
 
-    <LinearLayout
+    <FrameLayout
 	    android:layout_width="match_parent"
 	    android:layout_height="match_parent"
 	    android:orientation="horizontal"
@@ -14,179 +14,196 @@
 		android:layout_marginTop="5dip"    
 		android:background="@drawable/grayround">
 	    	
-		<FrameLayout
-		  	android:id="@+id/channel_frame"    
-		    android:layout_width="100dip"
-			android:layout_height="100dip">    
-		    <ImageView
-		        android:id="@+id/channel_icon"
-		       	android:layout_width="fill_parent" 
-		       	android:layout_height="fill_parent"
-		       	android:adjustViewBounds="true" 
-		       	android:scaleType="fitXY"
-				android:layout_marginLeft="10dip"
-				android:layout_marginRight="10dip"
-				android:layout_marginTop="10dip"
-				android:layout_marginBottom="10dip"
-				android:background="#FF0000"
-		        />
-			<ImageView				    
-				android:layout_width="50dip"
-				android:layout_height="50dip"
-				android:layout_gravity="center"		
-				android:gravity="center"	
-				android:src="@drawable/icon_playlist"								
-				/>			    	
-		</FrameLayout>
-    				
-		<LinearLayout	    
-		    android:layout_width="fill_parent"		    
-		    android:layout_height="fill_parent"
-			android:layout_marginLeft="5dip"		
-			android:layout_marginRight="5dip"						    
-			android:layout_marginBottom="10dip"		    
-		    android:orientation="vertical"
-			android:layout_gravity="bottom"
-			android:visibility="visible"
-			android:gravity="bottom">
-		    <LinearLayout	    
-			    android:layout_width="fill_parent"		    
-			    android:layout_height="0dip"
-			    android:layout_weight="1"	    
-			    android:orientation="horizontal"	    
-				android:layout_gravity="left|center_vertical"
-				android:gravity="left|center_vertical">
-				<LinearLayout	    
-				    android:id="@+id/two_title_lines"
-				    android:layout_width="0dip"		    
-				    android:layout_height="wrap_content"	
-					android:layout_weight="1"				        
-				    android:orientation="vertical"		    
-					android:layout_gravity="left|center_vertical"				
-					android:gravity="left|center_vertical">
-				    <TextView
-					    android:id="@+id/title"
-						android:layout_width="fill_parent"
-						android:layout_height="wrap_content"
-						android:layout_gravity="center"
-						android:textSize="24sp"
-						android:textColor="#FFFFFF"
-						android:paddingLeft="3dip"
-						android:paddingRight="5dip"
-						android:gravity="center_vertical|left"
-						android:singleLine="true"	
-						android:ellipsize="end"	
-				    	/>		
-				    <TextView
-					    android:id="@+id/subtitle"
-						android:layout_width="fill_parent"
-						android:layout_height="wrap_content"
-						android:layout_gravity="center"
-						android:textSize="18sp"
-						android:textColor="#FFFFFF"
-						android:paddingLeft="3dip"
-						android:paddingRight="5dip"
-						android:gravity="center_vertical|left"
-						android:singleLine="true"	
-						android:ellipsize="end"	
-				    	/>					    	
-				</LinearLayout>	    
-				<ImageView
-			    	android:id="@+id/share"
-			        android:layout_width="50dip" 
-			        android:layout_height="50dip"
-			        android:padding="6dip"
-			        android:adjustViewBounds="true"
-			        android:scaleType="fitXY"
-					android:src="@drawable/icon_share"
+        <LinearLayout
+		    android:layout_width="match_parent"
+		    android:layout_height="match_parent"
+		    android:orientation="horizontal">
+			
+			<FrameLayout
+			  	android:id="@+id/channel_frame"    
+			    android:layout_width="100dip"
+				android:layout_height="100dip">    
+			    <ImageView
+			        android:id="@+id/channel_icon"
+			       	android:layout_width="fill_parent" 
+			       	android:layout_height="fill_parent"
+			       	android:adjustViewBounds="true" 
+			       	android:scaleType="fitXY"
+					android:layout_marginLeft="10dip"
+					android:layout_marginRight="10dip"
+					android:layout_marginTop="10dip"
+					android:layout_marginBottom="10dip"
+					android:background="#FF0000"
 			        />
-				<FrameLayout
-			    	android:id="@+id/follow"			  
-			        android:layout_width="50dip" 
-			        android:layout_height="50dip">		    	  
+				<ImageView				    
+					android:layout_width="50dip"
+					android:layout_height="50dip"
+					android:layout_gravity="center"		
+					android:gravity="center"	
+					android:src="@drawable/icon_playlist"								
+					/>			    	
+			</FrameLayout>
+	    				
+			<LinearLayout	    
+			    android:layout_width="fill_parent"		    
+			    android:layout_height="fill_parent"
+				android:layout_marginLeft="5dip"		
+				android:layout_marginRight="5dip"						    
+				android:layout_marginBottom="10dip"		    
+			    android:orientation="vertical"
+				android:layout_gravity="bottom"
+				android:visibility="visible"
+				android:gravity="bottom">
+			    <LinearLayout	    
+				    android:layout_width="fill_parent"		    
+				    android:layout_height="0dip"
+				    android:layout_weight="1"	    
+				    android:orientation="horizontal"	    
+					android:layout_gravity="left|center_vertical"
+					android:gravity="left|center_vertical">
+					<LinearLayout	    
+					    android:id="@+id/two_title_lines"
+					    android:layout_width="0dip"		    
+					    android:layout_height="wrap_content"	
+						android:layout_weight="1"				        
+					    android:orientation="vertical"		    
+						android:layout_gravity="left|center_vertical"				
+						android:gravity="left|center_vertical">
+					    <TextView
+						    android:id="@+id/title"
+							android:layout_width="fill_parent"
+							android:layout_height="wrap_content"
+							android:layout_gravity="center"
+							android:textSize="24sp"
+							android:textColor="#FFFFFF"
+							android:paddingLeft="3dip"
+							android:paddingRight="5dip"
+							android:gravity="center_vertical|left"
+							android:singleLine="true"	
+							android:ellipsize="end"	
+					    	/>		
+					    <TextView
+						    android:id="@+id/subtitle"
+							android:layout_width="fill_parent"
+							android:layout_height="wrap_content"
+							android:layout_gravity="center"
+							android:textSize="18sp"
+							android:textColor="#FFFFFF"
+							android:paddingLeft="3dip"
+							android:paddingRight="5dip"
+							android:gravity="center_vertical|left"
+							android:singleLine="true"	
+							android:ellipsize="end"	
+					    	/>					    	
+					</LinearLayout>	    
 					<ImageView
-				    	android:id="@+id/follow_icon"
-				        android:layout_width="wrap_content" 
-				        android:layout_height="fill_parent"
+				    	android:id="@+id/share"
+				        android:layout_width="50dip" 
+				        android:layout_height="50dip"
 				        android:padding="6dip"
-						android:src="@drawable/icon_follow"
-				        />			
-				    <ProgressBar
-					    android:id="@+id/follow_progress"          
-				    	android:layout_width="fill_parent"
-				    	android:layout_height="fill_parent"
-				    	android:layout_gravity="center"
-				    	android:gravity="center"
-				        android:padding="6dip"			    	
-				    	style="@android:style/Widget.ProgressBar.Inverse"
-				    	android:visibility="gone"
-				    	/>					        
-			    </FrameLayout>		
+				        android:adjustViewBounds="true"
+				        android:scaleType="fitXY"
+						android:src="@drawable/icon_share"
+				        />
+					<FrameLayout
+				    	android:id="@+id/follow"			  
+				        android:layout_width="50dip" 
+				        android:layout_height="50dip">		    	  
+						<ImageView
+					    	android:id="@+id/follow_icon"
+					        android:layout_width="wrap_content" 
+					        android:layout_height="fill_parent"
+					        android:padding="6dip"
+							android:src="@drawable/icon_follow"
+					        />			
+					    <ProgressBar
+						    android:id="@+id/follow_progress"          
+					    	android:layout_width="fill_parent"
+					    	android:layout_height="fill_parent"
+					    	android:layout_gravity="center"
+					    	android:gravity="center"
+					        android:padding="6dip"			    	
+					    	style="@android:style/Widget.ProgressBar.Inverse"
+					    	android:visibility="gone"
+					    	/>					        
+				    </FrameLayout>		
+			</LinearLayout>		
+			    	<ImageView
+				    	android:id="@+id/triple_thumb"
+						android:layout_width="wrap_content"
+						android:layout_height="wrap_content"
+				        android:layout_gravity="bottom"
+				        android:gravity="bottom"
+				        android:background="#00000000"
+				        />				    	
+			<!-- LinearLayout	    
+			    android:layout_width="fill_parent"		    
+			    android:layout_height="wrap_content"	    
+			    android:orientation="horizontal"
+				android:layout_gravity="bottom"
+				android:gravity="bottom">
+				<FrameLayout 
+			        android:layout_width="0dip" 
+			        android:layout_height="wrap_content"
+			        android:layout_weight="1"
+			        android:layout_marginRight="5dip">
+			    	<ImageView
+				    	android:id="@+id/episode1"
+						android:layout_width="fill_parent"
+						android:layout_height="wrap_content"
+				        android:layout_gravity="bottom"
+				        android:gravity="bottom"
+				        android:background="#FF0000"
+				        android:adjustViewBounds="true"
+				        android:scaleType="centerCrop"
+				        />						        
+			    </FrameLayout>
+				<FrameLayout 
+			        android:layout_width="0dip" 
+			        android:layout_height="wrap_content"
+			        android:layout_weight="1"
+			        android:layout_marginRight="5dip">		        
+			    	<ImageView
+				    	android:id="@+id/episode2"
+						android:layout_width="fill_parent"
+						android:layout_height="wrap_content"
+				        android:layout_gravity="bottom"
+				        android:gravity="bottom"
+				        android:background="#FF0000"
+				        android:adjustViewBounds="true"
+				        android:scaleType="centerCrop"
+				        />					        
+			    </FrameLayout>	     
+				<FrameLayout 
+			        android:layout_width="0dip" 
+			        android:layout_height="wrap_content"
+			        android:layout_weight="1"
+			        android:layout_marginRight="5dip">
+			    	<ImageView
+				    	android:id="@+id/episode3"
+						android:layout_width="fill_parent"
+						android:layout_height="wrap_content"			
+				        android:layout_gravity="bottom"
+				        android:gravity="bottom"
+				        android:background="#FF0000"
+				        android:adjustViewBounds="true"
+				        android:scaleType="centerCrop"
+				        />					        
+			    </FrameLayout>          
+			</LinearLayout-->    		
+			</LinearLayout>
 		</LinearLayout>		
-		    	<ImageView
-			    	android:id="@+id/triple_thumb"
-					android:layout_width="wrap_content"
-					android:layout_height="wrap_content"
-			        android:layout_gravity="bottom"
-			        android:gravity="bottom"
-			        android:background="#00000000"
-			        />				    	
-		<!-- LinearLayout	    
-		    android:layout_width="fill_parent"		    
-		    android:layout_height="wrap_content"	    
-		    android:orientation="horizontal"
-			android:layout_gravity="bottom"
-			android:gravity="bottom">
-			<FrameLayout 
-		        android:layout_width="0dip" 
-		        android:layout_height="wrap_content"
-		        android:layout_weight="1"
-		        android:layout_marginRight="5dip">
-		    	<ImageView
-			    	android:id="@+id/episode1"
-					android:layout_width="fill_parent"
-					android:layout_height="wrap_content"
-			        android:layout_gravity="bottom"
-			        android:gravity="bottom"
-			        android:background="#FF0000"
-			        android:adjustViewBounds="true"
-			        android:scaleType="centerCrop"
-			        />						        
-		    </FrameLayout>
-			<FrameLayout 
-		        android:layout_width="0dip" 
-		        android:layout_height="wrap_content"
-		        android:layout_weight="1"
-		        android:layout_marginRight="5dip">		        
-		    	<ImageView
-			    	android:id="@+id/episode2"
-					android:layout_width="fill_parent"
-					android:layout_height="wrap_content"
-			        android:layout_gravity="bottom"
-			        android:gravity="bottom"
-			        android:background="#FF0000"
-			        android:adjustViewBounds="true"
-			        android:scaleType="centerCrop"
-			        />					        
-		    </FrameLayout>	     
-			<FrameLayout 
-		        android:layout_width="0dip" 
-		        android:layout_height="wrap_content"
-		        android:layout_weight="1"
-		        android:layout_marginRight="5dip">
-		    	<ImageView
-			    	android:id="@+id/episode3"
-					android:layout_width="fill_parent"
-					android:layout_height="wrap_content"			
-			        android:layout_gravity="bottom"
-			        android:gravity="bottom"
-			        android:background="#FF0000"
-			        android:adjustViewBounds="true"
-			        android:scaleType="centerCrop"
-			        />					        
-		    </FrameLayout>          
-		</LinearLayout-->    		
-		</LinearLayout>
-	</LinearLayout>		
-
+		<ImageView
+	    	android:id="@+id/special_tag"
+			android:layout_width="50dip"
+			android:layout_height="50dip"			
+	        android:layout_gravity="right|top"
+	        android:gravity="right|top"
+	        android:background="#00000000"
+	        android:src="@drawable/app_tag_best_en"
+	        android:adjustViewBounds="true"
+	        android:scaleType="fitXY"
+	        android:visibility="gone"
+	        />	
+	</FrameLayout>
 </LinearLayout>
